@@ -8,16 +8,24 @@ import engine.object.GameObject;
 import ia.perception.*;
 
 import java.util.*;
+import java.util.Random;
 
 public class DecisionTree extends Model {
 
-
-    private NearestFlagCompass nfc;
-    private TerritoryCompass tc;
+    private boolean isAttacking;
 
     public DecisionTree(){
-        nfc = new NearestFlagCompass(null,null);
-        tc = new TerritoryCompass(null,Team.NEUTRAL);
+        List<Perception> l_per = new ArrayList<>();
+        var nfc = new NearestFlagCompass(null,null);
+        var tc = new TerritoryCompass(null,Team.NEUTRAL);
+        var nac = new NearestAgentCompass(null,null);
+        l_per.add(nfc);
+        l_per.add(tc);
+        l_per.add(nac);
+        setPerceptions(l_per);
+        Random r = new Random();
+        isAttacking = r.nextBoolean();
+        //System.out.println(isAttacking);
     }
 
     /**
@@ -35,13 +43,18 @@ public class DecisionTree extends Model {
     @Override
     public Action getAction(Engine e, GameMap map, List<Agent> agents, List<GameObject> objects) {
         double rot;
-        double speed;
-        nfc.updatePerceptionValues(map, agents, objects);
-        PerceptionValue result = nfc.getPerceptionValues().getFirst();
-        if (getMyself().getFlag().isPresent() || result.vector().getLast() == 0.0 ) {
-            tc.updatePerceptionValues(map, agents, objects);
-            result = tc.getPerceptionValues().getFirst();
-        }
+        ArrayList<Perception> list_perception = (ArrayList<Perception>) getPerceptions();
+        PerceptionValue result;
+        //if (isAttacking) {
+        list_perception.get(0).updatePerceptionValues(map, agents, objects);
+        result = list_perception.get(0).getPerceptionValues().getFirst();
+            if (getMyself().getFlag().isPresent() || result.vector().getLast() == 0.0 ) {
+                list_perception.get(1).updatePerceptionValues(map, agents, objects);
+                result = list_perception.get(1).getPerceptionValues().getFirst();
+            }
+        //}else{
+        //    result = list_perception.get(2).getValue(map, agents, objects).getFirst();
+        //}
         rot = Math.clamp(result.vector().getFirst(),-1,1);
         //speed = Math.clamp(result.vector().getFirst(),-1,1);
         return new Action(rot,1);
@@ -49,9 +62,19 @@ public class DecisionTree extends Model {
 
     public void setMyself(Agent a) {
         super.setMyself(a);
-        nfc.setMy_agent(a);
+        //getting perceptions
+        ArrayList<Perception> list_perception = (ArrayList<Perception>) getPerceptions();
+        NearestFlagCompass nfc = (NearestFlagCompass) list_perception.get(0);
+        TerritoryCompass tc = (TerritoryCompass) list_perception.get(1);
+        //setting perceptions
         nfc.setObserved_team(a.getTeam());
         tc.setMy_agent(a);
         tc.setTerritory_observed(a.getTeam());
+        //senfing them back
+        ArrayList<Perception> output = new ArrayList<>();
+        output.add(nfc);
+        output.add(tc);
+        output.add(list_perception.get(2));
+        setPerceptions(output);
     }
 }
